--- a/cpskin/diazotheme/spirit/static/less/minisites.less
+++ b/cpskin/diazotheme/spirit/static/less/minisites.less
@@ -1,3 +1,7 @@
+// mini site la boverie
+
+//header
+
 #accueil .partenaires-1 img, 
 #accueil .partners-1 img,
 #accueil .partner-1 img   {
@@ -23,7 +27,6 @@
 }
 
 .portletStaticText.portlet-static-infos-pratiques {
-    background-color: #fff;
     margin-top: 0.2em;
     padding: 0em;
     min-height:190px;
@@ -65,7 +68,7 @@
     color: white;
 }
 .portletStaticText.portlet-static-infos-pratiques img {
-    margin-bottom: 3%;
+    margin-bottom: 6%;
 }
 .subsection-culture-musees-la-boverie #minisite-actions-inner {
     background: transparent none repeat scroll 0 0;
@@ -75,6 +78,12 @@
     color: white;
 }
 
+.subsection-culture-musees-la-boverie #minisite-actions ul,
+.subsection-kultur-museen-la-boverie #minisite-actions ul,
+.subsection-cultuur-musea-la-boverie #minisite-actions ul,
+.subsection-culture-museums-la-boverie #minisite-actions ul{
+  padding: 1%;
+}
 .subsection-culture-musees-la-boverie .bloc-rss,
 .subsection-culture-musees-la-boverie #portal-languageselector{
 display:none;
@@ -85,8 +94,10 @@ display:none;
 }
 
 
-.subsection-culture-musees-la-boverie #portal-top #cpskin-banner, .subsection-kultur-museen-la-boverie #portal-top #cpskin-banner,
-.subsection-cultuur-musea-la-boverie #portal-top #cpskin-banner, .subsection-culture-museums-la-boverie #portal-top #cpskin-banner{
+.subsection-culture-musees-la-boverie #portal-top #cpskin-banner,
+.subsection-kultur-museen-la-boverie #portal-top #cpskin-banner,
+.subsection-cultuur-musea-la-boverie #portal-top #cpskin-banner,
+.subsection-culture-museums-la-boverie #portal-top #cpskin-banner{
     clear: both;
 }
 
@@ -110,25 +121,6 @@ display:none;
 #minisite-logo img {
     margin: 0 !important;
     padding: 0.5em 0;
-}
-
-.subsection-culture-musees-la-boverie #minisite-search, .subsection-kultur-museen-la-boverie #minisite-search,
-.subsection-cultuur-musea-la-boverie #minisite-search, .subsection-culture-museums-la-boverie #minisite-search{
-    bottom: 0;
-    position: relative;
-    width: 100%;
-}
-
-.subsection-culture-musees-la-boverie #portal-searchbox, .subsection-kultur-museen-la-boverie #portal-searchbox,
-.subsection-cultuur-musea-la-boverie #portal-searchbox,.subsection-culture-museums-la-boverie #portal-searchbox {
-    border: 1px solid #e3e3e3;
-    left: 33%;
-    width: 31%;
-}
-
-.subsection-culture-musees-la-boverie .LSBox #searchGadget, .subsection-kultur-museen-la-boverie .LSBox #searchGadget,
-.subsection-cultuur-musea-la-boverie .LSBox #searchGadget, .subsection-culture-museums-la-boverie .LSBox #searchGadget{
-    width: 76%;
 }
 
 #portaltab-fr, #portaltab-en, #portaltab-de, #portaltab-nl {
@@ -155,6 +147,7 @@ body.subsection-cultuur-musea-la-boverie #visual-portal-wrapper, body.subsection
     background-size: 100% 100%;
 }
 
+//slider
 .subsection-culture-musees-la-boverie  #portal-column-two, .subsection-kultur-museen-la-boverie  #portal-column-two,
 .subsection-cultuur-musea-la-boverie  #portal-column-two, .subsection-culture-museums-la-boverie  #portal-column-two{
     padding-top:0.5em;
@@ -173,12 +166,41 @@ body.subsection-cultuur-musea-la-boverie #visual-portal-wrapper, body.subsection
     display:block;
 }
 
-.subsection-culture-musees-la-boverie .flex-container .carousel-a-la-une.flexslider, .subsection-culture-musees-la-boverie .acces .titre-rss, .subsection-culture-musees-la-boverie li.bloc-item .documentByLine, .subsection-culture-musees-la-boverie .voir-tout,
-.subsection-kultur-museen-la-boverie .flex-container .carousel-a-la-une.flexslider, .subsection-kultur-museen-la-boverie .acces .titre-rss, .subsection-kultur-museen-la-boverie li.bloc-item .documentByLine, .subsection-kultur-museen-la-boverie .voir-tout,
-.subsection-cultuur-musea-la-boverie .flex-container .carousel-a-la-une.flexslider, .subsection-cultuur-musea-la-boverie .acces .titre-rss, .subsection-cultuur-musea-la-boverie li.bloc-item .documentByLine, .subsection-cultuur-musea-la-boverie .voir-tout,
-.subsection-culture-museums-la-boverie .flex-container .carousel-a-la-une.flexslider, .subsection-culture-museums-la-boverie .acces .titre-rss, .subsection-culture-museums-la-boverie li.bloc-item .documentByLine, .subsection-culture-museums-la-boverie .voir-tout {
-    display: none;
+.subsection-culture-musees-la-boverie .slider-carousel:after,
+.subsection-kultur-museen-la-boverie .slider-carousel:after,
+.subsection-cultuur-musea-la-boverie .slider-carousel:after,
+.subsection-culture-museums-la-boverie .slider-carousel:after {
+    top: -1em;
+    bottom: -3.5em;
 }
+.subsection-culture-musees-la-boverie #slider-a-la-une.flexslider .flex-caption,
+.subsection-kultur-museen-la-boverie #slider-a-la-une.flexslider .flex-caption,
+.subsection-cultuur-musea-la-boverie #slider-a-la-une.flexslider .flex-caption,
+.subsection-culture-museums-la-boverie #slider-a-la-une.flexslider .flex-caption{
+  height: 220px;
+  margin: 0;
+  padding: 2em;
+  width: 100%;
+}
+.subsection-culture-musees-la-boverie #slider-a-la-une.flexslider .flex-caption::after,
+.subsection-kultur-museen-la-boverie #slider-a-la-une.flexslider .flex-caption::after,
+.subsection-cultuur-musea-la-boverie #slider-a-la-une.flexslider .flex-caption::after,
+.subsection-culture-museums-la-boverie #slider-a-la-une.flexslider .flex-caption::after{
+  height: 8.2em;
+}
+.subsection-culture-musees-la-boverie #slider-a-la-une .read-next-link,
+.subsection-kultur-museen-la-boverie #slider-a-la-une .read-next-link,
+.subsection-cultuur-musea-la-boverie #slider-a-la-une .read-next-link,
+.subsection-culture-museums-la-boverie #slider-a-la-une .read-next-link{
+  background: rgba(222,12,121,0.85)
+}
+.subsection-culture-musees-la-boverie .slider-carousel .flex-direction-nav li,
+.subsection-kultur-museen-la-boverie .slider-carousel .flex-direction-nav li,
+.subsection-cultuur-musea-la-boverie .slider-carousel .flex-direction-nav li,
+.subsection-culture-museums-la-boverie .slider-carousel .flex-direction-nav li {
+    background: rgba(222,12,121,0.85) !important;
+}
+//homepage
 
 .subsection-culture-musees-la-boverie .results, 
 .subsection-kultur-museen-la-boverie .results,
@@ -283,7 +305,7 @@ color:white;
 
 /* nav horizontal*/
 .container-minisite-globalnav-logo{
-    margin-top: 2%;
+    margin: 2% 0 1% 0;
 }
 .subsection-culture-musees-la-boverie #minisite-globalnav li a,
 .subsection-kultur-museen-la-boverie #minisite-globalnav li a,
@@ -324,12 +346,49 @@ color:white;
 
 /* fin nav horizontale */
 
-.subsection-culture-musees-la-boverie #viewlet-above-content-title .leadImage, .subsection-kultur-museen-la-boverie #viewlet-above-content-title .leadImage, 
-.subsection-cultuur-musea-la-boverie #viewlet-above-content-title .leadImage, .subsection-culture-museums-la-boverie #viewlet-above-content-title .leadImage{
+.subsection-culture-musees-la-boverie #viewlet-above-content-title .leadImage,
+.subsection-kultur-museen-la-boverie #viewlet-above-content-title .leadImage, 
+.subsection-cultuur-musea-la-boverie #viewlet-above-content-title .leadImage,
+.subsection-culture-museums-la-boverie #viewlet-above-content-title .leadImage{
     display: none;
 }
 
 .subsection-culture-musees-la-boverie .timezone,
 .subsection-culture-musees-la-boverie .timezone{
     display: none;
+}
+
+//out portal
+
+.in-minisite-out-portal.subsection-culture-musees-la-boverie .container-minisite-globalnav-logo,
+.in-minisite-out-portal.subsection-kultur-museen-la-boverie .container-minisite-globalnav-logo, 
+.in-minisite-out-portal.subsection-cultuur-musea-la-boverie .container-minisite-globalnav-logo,
+.in-minisite-out-portal.subsection-culture-museums-la-boverie .container-minisite-globalnav-logor{
+  margin: 0 0 1% 0;
+}
+.in-minisite-out-portal.subsection-culture-musees-la-boverie #search-wrapper,
+.in-minisite-out-portal.subsection-kultur-museen-la-boverie #search-wrapper, 
+.in-minisite-out-portal.subsection-cultuur-musea-la-boverie #search-wrapper,
+.in-minisite-out-portal.subsection-culture-museums-la-boverie #search-wrapper{
+  right: 2em;
+  top: 2.5em;
+}
+.in-minisite-out-portal.subsection-culture-musees-la-boverie a.btn-search,
+.in-minisite-out-portal.subsection-kultur-museen-la-boverie a.btn-search, 
+.in-minisite-out-portal.subsection-cultuur-musea-la-boverie a.btn-search,
+.in-minisite-out-portal.subsection-culture-museums-la-boverie a.btn-search{
+    background: rgba(222,12,121,0.7);
+    color: #ffffff;
+}
+.in-minisite-out-portal.subsection-culture-musees-la-boverie #portal-footer-wrapper .row,
+.in-minisite-out-portal.subsection-kultur-museen-la-boverie #portal-footer-wrapper .row,
+.in-minisite-out-portal.subsection-cultuur-musea-la-boverie #portal-footer-wrapper .row,
+.in-minisite-out-portal.subsection-culture-museums-la-boverie #portal-footer-wrapper .row{
+  background: transparent;  
+}
+.in-minisite-out-portal.subsection-culture-musees-la-boverie #footer-sitemap,
+.in-minisite-out-portal.subsection-kultur-museen-la-boverie #footer-sitemap,
+.in-minisite-out-portal.subsection-cultuur-musea-la-boverie #footer-sitemap,
+.in-minisite-out-portal.subsection-culture-museums-la-boverie #footer-sitemap{
+  display: none;
 }
