--- a/cpskin/diazotheme/spirit/static/less/minisites.less
+++ b/cpskin/diazotheme/spirit/static/less/minisites.less
@@ -171,34 +171,35 @@ body.subsection-cultuur-musea-la-boverie #visual-portal-wrapper, body.subsection
 .subsection-cultuur-musea-la-boverie .slider-carousel:after,
 .subsection-culture-museums-la-boverie .slider-carousel:after {
     top: -1em;
-    bottom: -3.5em;
+    bottom: -5.5em;
 }
 .subsection-culture-musees-la-boverie #slider-a-la-une.flexslider .flex-caption,
 .subsection-kultur-museen-la-boverie #slider-a-la-une.flexslider .flex-caption,
 .subsection-cultuur-musea-la-boverie #slider-a-la-une.flexslider .flex-caption,
 .subsection-culture-museums-la-boverie #slider-a-la-une.flexslider .flex-caption{
-  height: 220px;
+  height: 180px;
   margin: 0;
-  padding: 2em;
+  padding: 0.5em 2em;
   width: 100%;
 }
 .subsection-culture-musees-la-boverie #slider-a-la-une.flexslider .flex-caption::after,
 .subsection-kultur-museen-la-boverie #slider-a-la-une.flexslider .flex-caption::after,
 .subsection-cultuur-musea-la-boverie #slider-a-la-une.flexslider .flex-caption::after,
 .subsection-culture-museums-la-boverie #slider-a-la-une.flexslider .flex-caption::after{
-  height: 8.2em;
+  height: 5.2em;
 }
 .subsection-culture-musees-la-boverie #slider-a-la-une .read-next-link,
 .subsection-kultur-museen-la-boverie #slider-a-la-une .read-next-link,
 .subsection-cultuur-musea-la-boverie #slider-a-la-une .read-next-link,
 .subsection-culture-museums-la-boverie #slider-a-la-une .read-next-link{
-  background: rgba(222,12,121,0.85)
+  background: rgba(230,0,126,0.85)
 }
 .subsection-culture-musees-la-boverie .slider-carousel .flex-direction-nav li,
 .subsection-kultur-museen-la-boverie .slider-carousel .flex-direction-nav li,
 .subsection-cultuur-musea-la-boverie .slider-carousel .flex-direction-nav li,
 .subsection-culture-museums-la-boverie .slider-carousel .flex-direction-nav li {
-    background: rgba(222,12,121,0.85) !important;
+    background: rgba(230,0,126,0.85) !important;
+    margin-top: -3.75em;
 }
 //homepage
 
@@ -363,7 +364,7 @@ color:white;
 .in-minisite-out-portal.subsection-culture-musees-la-boverie .container-minisite-globalnav-logo,
 .in-minisite-out-portal.subsection-kultur-museen-la-boverie .container-minisite-globalnav-logo, 
 .in-minisite-out-portal.subsection-cultuur-musea-la-boverie .container-minisite-globalnav-logo,
-.in-minisite-out-portal.subsection-culture-museums-la-boverie .container-minisite-globalnav-logor{
+.in-minisite-out-portal.subsection-culture-museums-la-boverie .container-minisite-globalnav-logo{
   margin: 0 0 1% 0;
 }
 .in-minisite-out-portal.subsection-culture-musees-la-boverie #search-wrapper,
@@ -377,7 +378,7 @@ color:white;
 .in-minisite-out-portal.subsection-kultur-museen-la-boverie a.btn-search, 
 .in-minisite-out-portal.subsection-cultuur-musea-la-boverie a.btn-search,
 .in-minisite-out-portal.subsection-culture-museums-la-boverie a.btn-search{
-    background: rgba(222,12,121,0.7);
+    background: rgba(230,0,126,0.7);
     color: #ffffff;
 }
 .in-minisite-out-portal.subsection-culture-musees-la-boverie #portal-footer-wrapper .row,
