--- a/cpskin/diazotheme/spirit/static/less/mobile.less
+++ b/cpskin/diazotheme/spirit/static/less/mobile.less
@@ -521,3 +521,65 @@ h2.navigation-view-menu-title:hover + .navigation-view-menu-description{
 #visual-portal-wrapper #footer-social .social {
     width: 100%;
 }
+//mini site
+.container-minisite-globalnav-logo{
+   order: 5;
+}
+#minisite-logo{
+   width: 100%;
+}
+body.subsection-culture-musees-la-boverie #minisite-logo,
+body.subsection-kultur-museen-la-boverie #minisite-logo,
+body.subsection-cultuur-musea-la-boverie #minisite-logo,
+body.subsection-culture-museums-la-boverie #minisite-logo {
+    margin-top: 0em;
+}
+.subsection-culture-musees-la-boverie #minisite-navigation-inner,
+.subsection-kultur-museen-la-boverie #minisite-navigation-inner,
+.subsection-cultuur-musea-la-boverie #minisite-navigation-inner,
+.subsection-culture-museums-la-boverie #minisite-navigation-inner {
+   display: inline-block;
+   background: black;
+   padding: 1em;
+   box-sizing: border-box;
+}
+.subsection-culture-musees-la-boverie #minisite-globalnav,
+.subsection-kultur-museen-la-boverie #minisite-globalnav,
+.subsection-cultuur-musea-la-boverie #minisite-globalnav,
+.subsection-culture-museums-la-boverie #minisite-globalnav{
+   margin: 0;
+}
+body.subsection-culture-musees-la-boverie #slider-a-la-une.flexslider .flex-caption,
+body.subsection-kultur-museen-la-boverie #slider-a-la-une.flexslider .flex-caption,
+body.subsection-cultuur-musea-la-boverie #slider-a-la-une.flexslider .flex-caption,
+body.subsection-culture-museums-la-boverie #slider-a-la-une.flexslider .flex-caption {
+    height: 230px;
+    padding: 0.5em 3em;
+}
+.subsection-culture-musees-la-boverie .slider-multiple .carousel.flexslider .flex-direction-nav li,
+.subsection-kultur-museen-la-boverie .slider-multiple .carousel.flexslider .flex-direction-nav li,
+.subsection-cultuur-musea-la-boverie .slider-multiple .carousel.flexslider .flex-direction-nav li,
+.subsection-culture-museums-la-boverie .slider-multiple .carousel.flexslider .flex-direction-nav li,
+.subsection-culture-musees-la-boverie .slider-carousel .flex-direction-nav li,
+.subsection-kultur-museen-la-boverie .slider-carousel .flex-direction-nav li,
+.subsection-cultuur-musea-la-boverie .slider-carousel .flex-direction-nav li,
+.subsection-culture-museums-la-boverie .slider-carousel .flex-direction-nav li{
+    width: 40px;
+    height: 40px;
+}
+.subsection-culture-musees-la-boverie .slider-multiple .carousel.flexslider .flex-direction-nav a::before,
+.subsection-kultur-museen-la-boverie .slider-multiple .carousel.flexslider .flex-direction-nav a::before,
+.subsection-cultuur-musea-la-boverie .slider-multiple .carousel.flexslider .flex-direction-nav a::before,
+.subsection-culture-museums-la-boverie .slider-multiple .carousel.flexslider .flex-direction-nav a::before,
+.subsection-culture-musees-la-boverie .slider-carousel .flex-direction-nav a::before,
+.subsection-kultur-museen-la-boverie .slider-carousel .flex-direction-nav a::before,
+.subsection-cultuur-musea-la-boverie .slider-carousel .flex-direction-nav a::before,
+.subsection-culture-museums-la-boverie .slider-carousel .flex-direction-nav a::before{
+   margin-top: 6px;
+}
+#accueil .partenaires-1 img,
+#accueil .partners-1 img,
+#accueil .partner-1 img{
+   height: auto !important;
+   width: 100% !important;
+}
