--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -75,7 +75,7 @@ dl.portletNavigationTree dt.portletHeader a{
     border-bottom:0px solid white;
 }
 dl.portlet.portletNavigationTree a:hover {
-    color: #333 !important;
+    color: #fff !important;
 }
 
 //Annuaire
@@ -344,9 +344,6 @@ ul.navTreeLevel0 li a{
     border-top: 0em solid #ebebeb !important;
 }
 
-ul.navTreeLevel1 {
-    text-transform: none;
-}
 .portletNavigationTree .navTree {
     position: relative;
 }
@@ -649,7 +646,9 @@ fieldset#form-groups-related_contacts,
     padding: 2em;
     margin-bottom: 22%;
 }
-#footer-sitemap a,
+#footer-sitemap .footer-static a {
+    color: #b3b3b3;
+}
 #footer-sitemap h3 {
     color: #fff;
 }
