change css for mini site in mobile

--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -3,6 +3,9 @@
     color: #d7004e;
     background: transparent;
 }
+#visual-portal-wrapper dl.portlet .portletHeader a:link {
+    color: #fff;
+}
 #content a[href*=".pdf"] {
     padding-right: 1em;
 }
@@ -732,7 +735,7 @@ font-size:95%;
     top: 0;
 }
 //mobile
-.advb-submenu .advb-title {
+#visual-portal-wrapper .advb-submenu .advb-title {
     background-color: #404040;
 }
 //annuaire service
