--- a/cpskin/diazotheme/spirit/static/less/minisites.less
+++ b/cpskin/diazotheme/spirit/static/less/minisites.less
@@ -263,11 +263,11 @@ body.subsection-cultuur-musea-la-boverie #visual-portal-wrapper, body.subsection
 .subsection-kultur-museen-la-boverie .bloc-item h3,
 .subsection-cultuur-musea-la-boverie .bloc-item h3,
 .subsection-culture-museums-la-boverie .bloc-item h3 {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.8);
     bottom: 0;
     box-sizing: border-box;
     color: white;
-    height: 4.75em;
+    height: 5em;
     max-height: 100%;
     padding: 0.75em;
     position: absolute;
@@ -279,7 +279,7 @@ body.subsection-cultuur-musea-la-boverie #visual-portal-wrapper, body.subsection
 .subsection-kultur-museen-la-boverie .bloc-item a:hover h3,
 .subsection-cultuur-musea-la-boverie .bloc-item a:hover h3,
 .subsection-culture-museums-la-boverie .bloc-item a:hover h3 {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #000;
 }
 
 .bloc-2.bloc-document.edito {
