--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -192,8 +192,8 @@ dl.portlet.portletNavigationTree a:hover {
     margin-top: 0.25em;
     margin-bottom: 0;
 }
-#right-actions-viewlet .icons_only a,
-#right-actions-viewlet .iconifiedDocumentActions a{
+#viewlet-above-content #right-actions-viewlet .icons_only a,
+#viewlet-above-content #right-actions-viewlet .iconifiedDocumentActions a{
     margin-top: 0.25em;
     position: relative;
 }
