--- a/cpskin/diazotheme/spirit/static/less/mobile.less
+++ b/cpskin/diazotheme/spirit/static/less/mobile.less
@@ -107,6 +107,10 @@ body{
     top: 0;
     margin-bottom: 0.5em;
 }
+#visual-portal-wrapper .agenda .results ul .bloc-item:nth-child(1),
+#visual-portal-wrapper .agenda .results ul .bloc-item:nth-child(2){
+   border-right: none;
+}
 // Agenda vue
 .section-evenements.subsection-agenda .faceted-top-widgets,
 .collection-event .faceted-top-widgets{
