--- a/cpskin/diazotheme/spirit/static/less/mobilelarge.less
+++ b/cpskin/diazotheme/spirit/static/less/mobilelarge.less
@@ -160,6 +160,10 @@ body.subsection-culture-museums-la-boverie #minisite-logo {
     .agenda .results ul .bloc-item a {
         text-align: center;
     }
+    #visual-portal-wrapper .agenda .results ul .bloc-item:nth-child(1),
+    #visual-portal-wrapper .agenda .results ul .bloc-item:nth-child(2){
+        border-right: none;
+    }
     //homepage
     body.main-homepage #portal-top::after {
         height: calc(308%);
@@ -424,7 +428,7 @@ body.subsection-culture-museums-la-boverie #minisite-logo {
     .main-homepage .zoom-1::after,
     .main-homepage .zoom-2::after{
         top: 11.8em;
-        bottom: -51em;
+        bottom: 3em;
     }
     //annuaire
     #content-core .contact-entry {
