--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -744,9 +744,10 @@ dl.actionMenu.activated dt a{
     float: none;
     margin: 0;
 }
-.agenda .results ul .bloc-item:nth-child(1),
-.agenda .results ul .bloc-item:nth-child(2) {
+#visual-portal-wrapper .agenda .results ul .bloc-item:nth-child(1),
+#visual-portal-wrapper .agenda .results ul .bloc-item:nth-child(2) {
     border-right: 1px solid #ccc;
+    padding: 1.5em 1.5em 0.75em 1.5em !important;
 }
 .agenda .results ul .bloc-item .day-month {
     color: @theme;
@@ -759,6 +760,9 @@ dl.actionMenu.activated dt a{
     justify-content: center;
     display: flex;
     flex-flow: column nowrap;
+}
+.agenda .indexview-categories {
+    padding: 0 0 0.5em 0;
 }
 .agenda .results ul .bloc-item .month {
     font-size: 0.8em;
