--- a/cpskin/diazotheme/spirit/static/less/mobilelarge.less
+++ b/cpskin/diazotheme/spirit/static/less/mobilelarge.less
@@ -359,6 +359,18 @@ body.subsection-culture-museums-la-boverie #minisite-logo {
         max-width: calc(45%);
         top: -4em;
     }
+    //mini site
+    body.subsection-culture-musees-la-boverie .slider-carousel .flex-direction-nav li,
+    body.subsection-kultur-museen-la-boverie .slider-carousel .flex-direction-nav li,
+    body.subsection-cultuur-musea-la-boverie .slider-carousel .flex-direction-nav li,
+    body.subsection-culture-museums-la-boverie .slider-carousel .flex-direction-nav li{
+        margin-top: -9.75em;
+    }
+    #accueil .partenaires-1 img, #accueil .partners-1 img,
+    #accueil .partner-1 img {
+        height: auto !important;
+        width: 100% !important;
+    }
     
 }
 
