Add id visual-portal-wrapper to other actions.

--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -241,7 +241,7 @@ body.template-facetednavigation_view #content .organization-entry, body.template
    width:1em;
 }
 
-#viewlet-above-content #right-actions-viewlet #other-actions li a:before{
+#visual-portal-wrapper #viewlet-above-content #right-actions-viewlet #other-actions li a:before{
     margin:0em;
     padding: 1em;
     color: white;
@@ -253,14 +253,11 @@ body.template-facetednavigation_view #content .organization-entry, body.template
 #other-actions #social-share-container {
     bottom: -15em;
 }
-.icon-print:before {
-    background: #d7004e;
-}
 
-.icon-sendtomanager::before {
+#visual-portal-wrapper #other-actions [class^="icon-"]::before{
     background: #d7004e;
-}
-#right-actions-viewlet #other-actions #social-share::after{
+} 
+#visual-portal-wrapper #right-actions-viewlet #other-actions #social-share::after{
     color:  #fff;
     margin-top: 0.25em;
     margin-left: 0em;
