Change css for top-menu-actions

--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -352,7 +352,7 @@ ul.navTreeLevel0 li.sfHover a{
 }
 /*   top-actions   */
 #top-actions-actions > div,
-.top-menu-action{
+#top-actions .top-menu-action{
     display: inline-block;
     vertical-align: top;
 }
@@ -424,12 +424,12 @@ a.btn-search {
 dl.actionMenu.activated dt a{
     margin:0 0.25em;
 }
-.top-menu-action dd a {
+#top-actions .top-menu-action dd a {
     line-height: 2em;
     padding: 0 0.75em;
     &:hover{background: lighten(@background,20%)}
 }
-.top-menu-action dd{
+#top-actions .top-menu-action dd{
     background: @background;
     margin-right: 2em;
     margin-top: 3px;
